# anima

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  anima-init.js  anima-utils.py  anima.py  const.py  dev-requirements.txt  pyproject.toml  requirements.txt  test.py
scripts/: method-demo.py
src/anima/: __main__.py  const.py  core.py
src/anima/commands/: __init__.py  attack.py  combo.py  crit.py  mass.py  powers.py  shuffle.py
src/js/: anima-init.js
tests/: test.py  test_attack.py
